adding index.js as a front end javascript

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Plant care taker Initial Interface</title>
-    
+    <script src="/js/index.js"></script>
   </head>
   <body>
     <h>This is the page where you register and manage your Hardware modules (you must have your IOT router connected to the internet)</h> <br><br>
