adding ther CORS accepring * in flask app, and implementiing a basic get request from index.js (front-end js file). to reproduce the out put: be sure to change the url since am working on wsl on my local machine. you can change to any host you run the api on.

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Plant care taker Initial Interface</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
     <script src="/js/index.js"></script>
   </head>
   <body>
