--- a/web/register_new_watermodule.html
+++ b/web/register_new_watermodule.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Plant care taker wattering module registeration</title>
-    
-  </head>
+
+</head>
   <body>
     <h>This is the page where you can register your modules (Wattering module), based on the module ID (you can find this on the device), make sure your modules are connected to the IOT router and the last is connected to the internet (Installation guidlines are available in the documentations)</h><br><br>
     <h>You need to connect the wattering module pipes to the soil where the corresponding sensor is installed.</h><br><br>
@@ -13,7 +13,7 @@
 
         <!--<h>Select the sansor this Wattering module is associated to: (drop down)</h>-->
         &bigoplus;
-        <h>select the associated sensor:</h>
+        <h>select the associated sensor id:</h>
         <!--<h> select the plant name this sensor is monitoring: (drop down)</h>-->
         <select name="sensor_selection" id="available_sensors" required>
           <option value="none">None</option>
