adding a comment explaining what happens in the html page

--- a/web/register_new_sensor.html
+++ b/web/register_new_sensor.html
@@ -13,6 +13,7 @@
         <h>select the associated plant:</h>
         <!--<h> select the plant name this sensor is monitoring: (drop down)</h>-->
         <select name="plant_selection" id="available_plants" required>
+          <!--these are just mock opltions list, we will retreaive this from our backend-->
           <option value="none">None</option>
           <option value="plant_A">plant_A</option>
           <option value="plant_B">plant_B</option>
